--- a/ansible/roles/loadbalancer/files/haproxy.cfg.j2
+++ b/ansible/roles/loadbalancer/files/haproxy.cfg.j2
@@ -29,5 +29,6 @@ frontend app_frontend
 backend app_backend
         mode http
         balance roundrobin
-        server {{hostvars[aws-ec2-webapp1].inventory_hostname}} {{web_server_1_local_ip}}:80 check
-        server {{hostvars[aws-ec2-webapp2].inventory_hostname}} {{web_server_2_local_ip}}:80 check
+{% for host, ip in groups['webapp'] | zip(ip_list_for_lb)| list %}
+        server {{host}} {{ip}}:80 check
+{% endfor %}
